# ifrs9pro_backend

./: .dockerignore  .gitignore  .spectral.yaml  Caddyfile.prod  Caddyfile.save  DOCUMENTATION.md  Dockerfile  Dockerfile.local  Dockerfile.prod  README.md  alembic.ini  create_openaapi.py  debug_loan_fix.py  docker-compose-staging.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker_nuke.sh  export_openapi.py  generate_dummy_data.py  init.sql  locustfile.py  main.py  mapping.json  mkdocs.yml  models.py  openapi.json  openapi.yaml  profiling.py  pyproject.toml  pytest_report.html  redis.conf  requirements.txt  rewrites.py  schemas.py  schemathesis.toml  setup-docker.sh  setup-ssl.sh  (+9 more)
alembic/: env.py
alembic_backup/: 0c734160ea6d_adding_ifrs9_staging_and_bog_staging_to_.py  476264579e83_create_subscription_plans_table.py  4d28afa6976a_add_ecl_column_to_loans_table.py  527520fb0e43_add_multi_tenant_support_with_tenant_id_.py  54ce69143111_adding_final_ecl_and_bog_provision_.py  8b37e2c9ec34_adding_file_path_and_status_columns_to_.py  c8c218b29baf_making_calculation_field_in_loan_table_.py  d59ab5d0a61a_amending_tables_for_fast_deletion.py  e486a89395d3_updating_db.py  e5486b54d993_add_tenant_registration_fields.py  fe172cb8af3c_adding_credit_loss_fields.py
app/: celery_app.py  config.py  database.py  dependencies.py  models.py  schemas.py
auth/: email.py  utils.py
data/: .~lock.loan_details_complete.xlsx#  IFRS9 PRO documentation.xlsx  customer_data.xlsx  loan collateral data.xlsx  loan_details_complete.xlsx
docker/: Caddyfile  Caddyfile.save  Dockerfile  docker-compose.yml
docs/: COMPREHENSIVE_DOCUMENTATION.md  authentication.md  index.md  portfolios.md
my_locustfiles/: Dockerfile  auth.py  dashboard.py  locustfile.py  portfolio.py  reports.py
reports/: BOG_impairment_detailed_report_6669a38ced9d4189b04752cc23a0989e.xlsx  BOG_impairment_detailed_report_71a3fef5a5994d66bf94a9e26f25273a.xlsx  BOG_impairment_detailed_report_8afea835613347e7852641c2a4fd24b1.xlsx  BOG_impairment_detailed_report_c33517a922974ec6bb4ec27532f4313c.xlsx  BOG_impairment_detailed_report_dc2125910d04450da0328cc2f8cf1717.xlsx  BOG_impairment_detailed_report_f18f60b3fd5a428eb34d4b73ff5cd72f.xlsx  BOG_impairmnt_summary_by_stages_7661081344b940af86bcd8feac66d378.xlsx  BOG_impairmnt_summary_by_stages_a5f7b44de5bb4abdaf654429ad34d544.xlsx  billing-tests.html  ecl_detailed_report_0029eab27ef9446ca6686144c2b2b974.xlsx  ecl_detailed_report_2e5be837c28c4cdd917238f387a21f57.xlsx  ecl_detailed_report_45eb6b5fccf74ca09c1b59f71206bfb0.xlsx  ecl_detailed_report_52db72d326914cbaaccc4694596bfe0e.xlsx  ecl_detailed_report_56042395bc834d8983dfe2736880031b.xlsx  ecl_detailed_report_5823c8366a454e1f9eb9fbe7048c4a9d.xlsx  ecl_detailed_report_623433d572cc458db3244006bcef5f4d.xlsx  ecl_detailed_report_69c6acb9bf19456788fbb212ef2f1355.xlsx  ecl_detailed_report_6b7285868367429da281296f2ddf696a.xlsx  ecl_detailed_report_7659e7e98d454d8989c6d32b44b5edd1.xlsx  ecl_detailed_report_7c4c50c314a8478a9ce873ead33e9951.xlsx  ecl_detailed_report_9ad7e3dd00f0464aab1b85cd78d522fa.xlsx  ecl_detailed_report_a83950366b8e4cb6b68660495319d26c.xlsx  ecl_detailed_report_b98af9727beb4ce994f9866b7a3a30d7.xlsx  ecl_detailed_report_ceaa94059b514dcb9c993addae07ade1.xlsx  ecl_detailed_report_d43da7f3ab8f4e6299e1683450788a14.xlsx  ecl_detailed_report_d4db728b729245c190707c001ef8a882.xlsx  ecl_detailed_report_dbc98a4ef9a94261a5ebf4e7ec43c97a.xlsx  ecl_detailed_report_e9ab53d402e34e40950215b2430e8671.xlsx  ecl_detailed_report_f7601ef3ef2b4fa48ef6d09918fddb4e.xlsx  ecl_detailed_report_fa4f3bd6d7b24d7f9ca90e61464b32bb.xlsx  ecl_detailed_report_fffbd7a2469a4a55b8eb8bf1b11e4b0b.xlsx  ecl_report_summarised_by_stages_645fab09de4a4708bfb0aebabc5e6f30.xlsx  (+11 more)
(+101 files in other folders)
