[tool.poetry]
name = "ifrs9pro"
version = "0.1.0"
description = ""
authors = ["Lawrence Logoh <lawrence.logoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
