[tool.poetry]
name = "ifrs9pro"
version = "0.1.0"
description = ""
authors = ["Lawrence Logoh <lawrence.logoh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
aiosmtplib = "^4.0.0"
argon2-cffi = "^23.1.0"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
