[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ifrs9pro"
version = "0.1.0"
description = "IFRS 9 impairment app"
authors = ["Your Name <your@email.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "==2.6.1"
aiohttp = "==3.11.13"
aiosignal = "==1.3.2"
aiosmtplib = "==4.0.0"
alembic = "==1.15.1"
annotated-types = "==0.7.0"
anyio = "==4.8.0"
argon2-cffi-bindings = "==21.2.0"
argon2-cffi = "==23.1.0"
attrs = "==25.3.0"
azure-common = "==1.1.28"
azure-communication-email = "==1.0.0"
azure-core = "==1.32.0"
azure-mgmt-core = "==1.5.0"
azure-storage-blob = "==12.25.1"
bcrypt = "==4.3.0"
certifi = "==2025.1.31"
cffi = "==1.17.1"
chardet = "==5.2.0"
charset-normalizer = "==3.4.1"
click = "==8.1.8"
colorama = "==0.4.6"
cryptography = "==44.0.2"
dnspython = "==2.7.0"
dotenv = "==0.9.9"
ecdsa = "==0.19.1"
email-validator = "==2.2.0"
et-xmlfile = "==2.0.0"
frozenlist = "==1.5.0"
greenlet = "==3.1.1"
gunicorn = "==23.0.0"
h11 = "==0.14.0"
httpcore = "==1.0.7"
httptools = "==0.6.4"
httpx = "==0.28.1"
idna = "==3.10"
isodate = "==0.7.2"
jinja2 = "==3.1.6"
joblib = "==1.4.2"
mako = "==1.3.9"
markdown-it-py = "==3.0.0"
markupsafe = "==3.0.2"
mdurl = "==0.1.2"
msrest = "==0.7.1"
multidict = "==6.1.0"
numpy = "==2.2.3"
oauthlib = "==3.2.2"
openpyxl = "==3.1.5"
packaging = "==24.2"
pandas = "==2.2.3"
pillow = "==11.1.0"
propcache = "==0.3.0"
psycopg2-binary = "==2.9.10"
pyasn1 = "==0.4.8"
pycparser = "==2.22"
pydantic-core = "==2.27.2"
pydantic = "==2.10.6"
pygments = "==2.19.1"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.0.1"
python-multipart = "==0.0.20"
pytz = "==2025.1"
pyyaml = "==6.0.2"
reportlab = "==4.3.1"
requests-oauthlib = "==2.0.0"
requests = "==2.32.3"
rich-toolkit = "==0.13.2"
rich = "==13.9.4"
rsa = "==4.9"
scikit-learn = "==1.6.1"
scipy = "==1.15.2"
shellingham = "==1.5.4"
six = "==1.17.0"
sniffio = "==1.3.1"
sqlalchemy = "==2.0.39"
starlette = "==0.46.1"
threadpoolctl = "==3.6.0"
typer = "==0.15.2"
typing-extensions = "==4.12.2"
tzdata = "==2025.1"
urllib3 = "==2.3.0"
uvloop = "==0.21.0"
watchfiles = "==1.0.4"
websockets = "==15.0.1"
yarl = "==1.18.3"
XlsxWriter = "==3.2.3"

[tool.poetry.dependencies.fastapi-cli]
version = "==0.0.7"
extras = ["standard"]

[tool.poetry.dependencies.fastapi]
version = "==0.115.11"
extras = ["standard"]

[tool.poetry.dependencies.passlib]
version = "==1.7.4"
extras = ["bcrypt"]

[tool.poetry.dependencies.python-jose]
version = "==3.4.0"
extras = ["cryptography"]

[tool.poetry.dependencies.uvicorn]
version = "==0.34.0"
extras = ["standard"]

